# keycloak-integrations

./: README.md  docker-compose.yml
flask-keycloak/: Dockerfile  client_secrets.json  keycloak_config.json  pyproject.toml
flask-keycloak/app/: app_config.py  logger.py  main.py  wsgi.py
flask-keycloak/app/api/: routes.py  utils.py
flask-keycloak/app/api/endpoints/: auth.py  users.py
flask-keycloak/app/api/views/: pages.py
flask-keycloak/app/api/views/templates/: index.html
flask-keycloak/app/services/: oidc.py
keycloak/: Dockerfile-local
keycloak/realm/: test-realm.json
react-keycloak/: Dockerfile  package-lock.json  package.json  vite.config.ts
react-keycloak/src/: App.tsx  auth-config.json  main.tsx
react-keycloak/src/components/: Login.tsx  ProtectedComponent.tsx
react-keycloak/src/components/Authentication/: AuthConfigContext.tsx  AuthProviderWrapper.tsx
react-keycloak/src/components/Header/: Header.tsx
react-keycloak/src/hooks/: getUser.tsx
react-keycloak/src/types/: AuthConfigState.tsx
