[project]
name = "flask-keycloak"
version = "0.1.0"
description = "Simple keycloak integration for flask apps"
authors = [
    {name = "Christian Oertlin",email = "c.oertlin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-keycloak (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
